# biopygeon

./: .gitignore  README.md  README_en.md  app.py  pyproject.toml  requirements.txt
biopygeon/: __init__.py  config.py  logger.py  main.py  network.py  ui_app.py
biopygeon/commands/: __init__.py  ask.py  auth.py  bio.py  chat.py  lit.py  omics.py  publish.py  ui.py
biopygeon/engines/: agent_loop.py  assistant.py  audit_logger.py  bibliometrics.py  biology.py  cache_manager.py  formatter.py  literature.py  omics.py  primitive_schema.py  primitives.py  q1_pipeline.py  report_generator.py  tool_registry.py
biopygeon/parsers/: generic.py
biopygeon/styles/: nature.mplstyle
