[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopygeon"
version = "1.0.51"
authors = [
  { name="Bio Dev", email="dev@example.com" },
]
description = "The Last Mile Publication Aggregator CLI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "ipython-genutils",
    "stmol>=0.0.9",
    "py3Dmol>=2.4.2",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "reportlab>=4.0.0",
    "semanticscholar>=0.8.0",
    "biopython>=1.80",
    "matplotlib-venn>=0.11",
    "rdkit>=2023.3.1",
    "gemmi>=0.6.2",
    "meeko>=0.7.1",
    "python-docx>=1.1.0",
    "primer3-py>=2.0.1",
    "networkx>=3.0",
    "seaborn>=0.12.0",
    "pyvis>=0.3.1",
    "jinja2>=3.1.2",
    "requests-cache>=1.0.0",
    "tenacity>=8.2.0",
    "pywin32>=306 ; sys_platform == 'win32'",
    "plotly>=5.14.0",
    "stmol>=0.0.9",
    "py3Dmol>=2.0.0",
]

[project.scripts]
biopygeon = "biopygeon.main:app"

[tool.setuptools]
packages = ["biopygeon", "biopygeon.commands", "biopygeon.engines", "biopygeon.parsers", "biopygeon.styles"]
package-data = {"biopygeon.styles" = ["*.mplstyle"], "biopygeon.engines" = ["*.html"]}
